Archive2/3a/c2019b41bae7eb/output
main.cpp: In function 'int main()':
main.cpp:26:5: error: static assertion failed: 2 power of 5 is 32
     static_assert( pow2(5) != 32, "2 power of 5 is 32");
     ^
